# RG_Stock

./: .gitignore  README.md  plan.md  pyproject.toml
config/: default.yaml  horizons.yaml  massive_key.txt  sample.yaml
scripts/: build_intraday_panel.py  build_signals.py  evaluate.py  fetch_massive_data.py  run_all.py  train_esn.py
src/data/: massive_fetcher.py  panel_builder.py  preprocess.py  resample_10m.py  session_filter.py  universe.py
src/evaluation/: diebold_mariano.py  metrics.py  model_confidence_set.py
src/model/: baselines.py  esn.py  readout.py  reservoir.py
src/signals/: ou_estimation.py  pca_factors.py  pipeline.py  residuals.py  zscore.py
src/training/: cross_validation.py  hyperparams.py  rolling_window.py
src/utils/: linalg.py
tests/: test_readout.py  test_resample_10m.py  test_reservoir.py  test_signals.py
